SubBt/force-app/main/default/objects/Project_Task__c/fields/Actual_Completion_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_date__c</fullName>
    <inlineHelpText>This is when the percent complete field on the schedule item was marked 100%.</inlineHelpText>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>