SubBt/force-app/main/default/objects/Project_Task__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <inlineHelpText>This is when the percent complete field on the schedule item was first updated.</inlineHelpText>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>