SubBt/force-app/main/default/objects/Project_Task__c/fields/Add_To_All_Active_Schedules__c.field-meta.xml
<CustomField>
    <fullName>Add_To_All_Active_Schedules__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will allow you to add this Schedule Item to all Schedules that are Active.</inlineHelpText>
    <label>Add To All Active Schedules</label>
    <type>Checkbox</type>
</CustomField>