SubBt/force-app/main/default/objects/Project_Task__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <displayFormat>PT-{00000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>