SubBt/force-app/main/default/objects/Project_Task__c/fields/Budget_Line__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Line</label>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipLabel>Schedule Items</relationshipLabel>
    <relationshipName>Schedule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>