SubBt/force-app/main/default/objects/Project_Task__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when the task is completed and the % Complete field will be set to 100%.</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>