SubBt/force-app/main/default/objects/Project_Task__c/fields/Completion_Slippage__c.field-meta.xml
<CustomField>
    <fullName>Completion_Slippage__c</fullName>
    <formula>/*buildertek__Original_End_Date__c -   buildertek__Finish__c*/

IF ( Completion__c &lt; 1, (Original_End_Date__c - TODAY()), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Slippage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>