SubBt/force-app/main/default/objects/Project_Task__c/fields/Completion_updated__c.field-meta.xml
<CustomField>
    <fullName>Completion_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completion % updated</label>
    <type>Checkbox</type>
</CustomField>