SubBt/force-app/main/default/objects/Project_Task__c/fields/Contractor_Resource__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is used to identify the Contractor Resource that is assigned to the Task.</inlineHelpText>
    <label>Contractor Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Contractor__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedule Items (Contractor Resource)</relationshipLabel>
    <relationshipName>Schedule_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>