SubBt/force-app/main/default/objects/Project_Task__c/fields/Days_Completed__c.field-meta.xml
<CustomField>
    <fullName>Days_Completed__c</fullName>
    <formula>Completion__c *  Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>