SubBt/force-app/main/default/objects/Project_Task__c/fields/Dependency__c.field-meta.xml
<CustomField>
    <fullName>Dependency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Predecessor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Task__c.Schedule__c</field>
            <operation>equals</operation>
            <valueField>$Source.Schedule__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Schedule Items</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>