SubBt/force-app/main/default/objects/Project_Task__c/fields/Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_End_Date__c</fullName>
    <formula>CASE( 
MOD(Expected_Start_Date__c + IF(Duration__c &gt; 0, Duration__c - 1, Duration__c) - DATE(1900, 1, 7), 7), 
0,Expected_Start_Date__c + IF(Duration__c &gt; 0, Duration__c - 1, Duration__c)+ 1, 
6,Expected_Start_Date__c + IF(Duration__c &gt; 0, Duration__c - 1, Duration__c)+ 2, 
Expected_Start_Date__c + IF(Duration__c &gt; 0, Duration__c - 1, Duration__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is driven from the current finish date on the schedule.</inlineHelpText>
    <label>Anticipated Completion Date</label>
    <type>Date</type>
</CustomField>