SubBt/force-app/main/default/objects/Project_Task__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <inlineHelpText>Task End Date</inlineHelpText>
    <label>Finish</label>
    <type>Date</type>
</CustomField>