SubBt/force-app/main/default/objects/Project_Task__c/fields/Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Finish_Date__c</fullName>
    <description>Finish date</description>
    <formula>IF(Duration__c == 0,(Start__c  + Duration__c), (Start__c  + Duration__c - 1))</formula>
    <inlineHelpText>Finish Date (Calculated)</inlineHelpText>
    <label>Completion (Calculated)</label>
    <type>Date</type>
</CustomField>