SubBt/force-app/main/default/objects/Project_Task__c/fields/Indent_Task__c.field-meta.xml
<CustomField>
    <fullName>Indent_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indent Task</label>
    <type>Checkbox</type>
</CustomField>