SubBt/force-app/main/default/objects/Project_Task__c/fields/Lag__c.field-meta.xml
<CustomField>
    <fullName>Lag__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lag Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>