SubBt/force-app/main/default/objects/Project_Task__c/fields/Last_Saved_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Saved_End_Date__c</fullName>
    <label>Last Saved End Date</label>
    <type>Date</type>
</CustomField>