SubBt/force-app/main/default/objects/Project_Task__c/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <inlineHelpText>This indicates the lead time the Purchase Order needs to be ordered.</inlineHelpText>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>