SubBt/force-app/main/default/objects/Project_Task__c/fields/Material_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Material_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked the material has been ordered.</inlineHelpText>
    <label>Material Ordered.</label>
    <type>Checkbox</type>
</CustomField>