SubBt/force-app/main/default/objects/Project_Task__c/fields/Material_Received__c.field-meta.xml
<CustomField>
    <fullName>Material_Received__c</fullName>
    <inlineHelpText>If this box is checked the material has been received.</inlineHelpText>
    <label>Material Received?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Partially Recived.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>