SubBt/force-app/main/default/objects/Project_Task__c/fields/Original_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_End_Date__c</fullName>
    <inlineHelpText>Date the Scheduled Item was supposed to End when the schedule was originally created.</inlineHelpText>
    <label>Original Completion Date</label>
    <type>Date</type>
</CustomField>