SubBt/force-app/main/default/objects/Project_Task__c/fields/Original_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Start_Date__c</fullName>
    <inlineHelpText>Date the Scheduled Item was supposed to Start when the schedule was originally created.</inlineHelpText>
    <label>Original Start Date</label>
    <type>Date</type>
</CustomField>