SubBt/force-app/main/default/objects/Project_Task__c/fields/Payable_Task__c.field-meta.xml
<CustomField>
    <fullName>Payable_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if when this task is complete a PO should be paid.</inlineHelpText>
    <label>Payable Task</label>
    <type>Checkbox</type>
</CustomField>