SubBt/force-app/main/default/objects/Project_Task__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bathroom Tops</fullName>
            </value>
            <value>
                <fullName>Cabinets/Flooring/Trim</fullName>
            </value>
            <value>
                <fullName>Candidate Selection</fullName>
            </value>
            <value>
                <fullName>Carpet/Cleaning</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Codes</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Concrete flat work</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Demolition</fullName>
            </value>
            <value>
                <fullName>Drywall</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Excavation</fullName>
            </value>
            <value>
                <fullName>Fabrication</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Finish Carpentry</fullName>
            </value>
            <value>
                <fullName>Finish Carpentry to Paint</fullName>
            </value>
            <value>
                <fullName>Flooring and Tile</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Framing</fullName>
            </value>
            <value>
                <fullName>Framing to Drywall</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Ground Work</fullName>
            </value>
            <value>
                <fullName>Interior Doors</fullName>
            </value>
            <value>
                <fullName>Kitchen Tops</fullName>
            </value>
            <value>
                <fullName>Landscape &amp; Fencing</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Mechanical Trim</fullName>
            </value>
            <value>
                <fullName>Metal Components</fullName>
            </value>
            <value>
                <fullName>NHO to Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>