SubBt/force-app/main/default/objects/Project_Task__c/fields/ProjectNamewithTask__c.field-meta.xml
<CustomField>
    <fullName>ProjectNamewithTask__c</fullName>
    <formula>Schedule__r.Project__r.Name +&apos; &apos;+&apos;-&apos;+&apos; &apos;+  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProjectNamewithTask</label>
    <type>Text</type>
</CustomField>