SubBt/force-app/main/default/objects/Project_Task__c/fields/Reason_for_Date_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Date_Change__c</fullName>
    <label>Reason for Date Change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>