SubBt/force-app/main/default/objects/Project_Task__c/fields/Reason_for_Date_Change_PL__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Date_Change_PL__c</fullName>
    <label>Reason for Date Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landlord Change</fullName>
            </value>
            <value>
                <fullName>Sup Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>