SubBt/force-app/main/default/objects/Project_Task__c/fields/Reference_for_Import__c.field-meta.xml
<CustomField>
    <fullName>Reference_for_Import__c</fullName>
    <label>Reference for Import</label>
    <length>255</length>
    <type>Text</type>
</CustomField>