SubBt/force-app/main/default/objects/Project_Task__c/fields/Required_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Completion_Date__c</fullName>
    <inlineHelpText>Date the Task is required to be completed.</inlineHelpText>
    <label>Required Completion Date</label>
    <type>Date</type>
</CustomField>