SubBt/force-app/main/default/objects/Project_Task__c/fields/Schedule_Item_Dependency_Path__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Item_Dependency_Path__c</fullName>
    <label>Schedule Item Dependency Path</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>