SubBt/force-app/main/default/objects/Project_Task__c/fields/Send_Email_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Confirmation</label>
    <type>Checkbox</type>
</CustomField>