SubBt/force-app/main/default/objects/Project_Task__c/fields/Slippage__c.field-meta.xml
<CustomField>
    <fullName>Slippage__c</fullName>
    <formula>/*buildertek__Original_Start_Date__c -  buildertek__Start__c */

IF ( Completion__c = 0, ( Start__c  - TODAY()), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Slippage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>