SubBt/force-app/main/default/objects/Project_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( Completion__c == 1, &apos;Completed&apos;,  IF(AND(Completion__c &lt; 1, Completion__c &gt; 0), &apos;In Progress&apos;, &apos;Not Started&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>