SubBt/force-app/main/default/objects/Project_Task__c/fields/Use_Internal_Resource_from_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Use_Internal_Resource_from_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will automatically pull the Internal Resource from the Schedule and use it for this Schedule Item that is being created.</inlineHelpText>
    <label>Use Internal Resource from Schedule</label>
    <type>Checkbox</type>
</CustomField>