SubBt/force-app/main/default/objects/Project_Task__c/fields/Use_Project_Manager_from_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Use_Project_Manager_from_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will automatically pull the Project Manager from the Schedule and use it for this Schedule Item that is being created.</inlineHelpText>
    <label>Use Project Manager from Schedule</label>
    <type>Checkbox</type>
</CustomField>