SubBt/force-app/main/default/objects/Project_Task__c/recordTypes/RECORD_TYPE_1.recordType-meta.xml
<RecordType>
    <fullName>RECORD_TYPE_1</fullName>
    <active>true</active>
    <label>RECORD TYPE 1</label>
</RecordType>