SubBt/force-app/main/default/objects/Project_Task__c/validationRules/End_Date_cannot_be_less_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_cannot_be_less_than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start__c &gt; Finish__c</errorConditionFormula>
    <errorDisplayField>Finish__c</errorDisplayField>
    <errorMessage>Finish Date cannot be less than Start Date</errorMessage>
</ValidationRule>