SubBt/force-app/main/default/objects/Project_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Start__c</columns>
    <columns>Finish__c</columns>
    <columns>Completion__c</columns>
    <columns>Contractor__c</columns>
    <columns>Resource__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>