SubBt/force-app/main/default/objects/Project_Task__c/listViews/Contractor_Wise_Scheduled_Items.listView-meta.xml
<ListView>
    <fullName>Contractor_Wise_Scheduled_Items</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Schedule__c</columns>
    <columns>Start__c</columns>
    <columns>Finish__c</columns>
    <columns>Status__c</columns>
    <columns>Contractor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contractor__c</field>
        <operation>equals</operation>
    </filters>
    <label>Contractor Scheduled Items</label>
</ListView>