SubBt/force-app/main/default/objects/Project_Task__c/listViews/North_Kansas_City_Hospital.listView-meta.xml
<ListView>
    <fullName>North_Kansas_City_Hospital</fullName>
    <columns>NAME</columns>
    <columns>Start__c</columns>
    <columns>Finish__c</columns>
    <columns>Contractor__c</columns>
    <columns>Contractor_Resource__c</columns>
    <columns>Resource__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>North KC Hospital Addition</value>
    </filters>
    <label>North Kansas City Hospital</label>
</ListView>